Добавляет разметку главной страницы

--- a/source/index.html
+++ b/source/index.html
@@ -1,13 +1,192 @@
 <!DOCTYPE html>
 <html class="page" lang="ru">
-  <head>
-    <meta charset="UTF-8">
-    <title>Название проекта</title>
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-    <link rel="stylesheet" href="styles/styles.css">
-    <script src="scripts/index.js" defer></script>
-  </head>
-  <body class="page__body">
-    <header class="header">Шапка</header>
+<head>
+  <meta charset="UTF-8">
+  <title>Cat energy</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <link rel="stylesheet" href="styles/styles.css">
+  <script src="scripts/index.js" defer></script>
+</head>
+<body class="page__body">
+  <header class="header">
+    <p>Проект "cat energy"</p>
+    <header class="main-header">
+      <div class="main-header__wrapper">
+        <a class="main-header__logo" href="index.html">
+          <img class="main-header__logo-pic logo-pic" src="images/logo-pic.svg" alt="Логотип сайта" width="70" height="59">
+        </a>
+        <a class="main-header__logo" href="index.html">
+          <img class="main-header__logo-text logo-text" src="images/logo-text.svg" alt="Логотип сайта" width="118" height="59">
+        </a>
+        <nav class="main-nav">
+          <button class="main-nav__toggle" type="button">
+            <span class="visually-hidden">Открыть меню</span>
+          </button>
+          <ul class="main-nav__list">
+            <li class="main-nav__item">
+              <a class="main-nav__link main-nav__link--current" href="index.html">Главная</a>
+            </li>
+            <li class="main-nav__item">
+              <a class="main-nav__link" href="catalog.html">Каталог продукции</a>
+            </li>
+            <li class="main-nav__item">
+              <a class="main-nav__link" href="#">Подбор программы</a>
+            </li>
+          </ul>
+        </nav>
+        <section class="hero-section">
+          <div class="hero-section__wrapper">
+            <h1 class="hero-section__title section-title">Функциональное питание для котов</h1>
+            <p class="hero-section__desc">
+              Занялся собой? Займись котом!
+            </p>
+            <a class="primary-button button" href="#">Подбор программы</a>
+            <div class="hero-section__image-container">
+              <img class="hero-section__image" src="images/hero-top.png" alt="Cat Energy со вкусом курицы" width="280" height="270">
+            </div>
+          </div>
+        </section>
+      </div>
+    </header>
+    <main class="main-content">
+      <section class="diet">
+        <div class="diet__wrapper">
+          <ul class="diet__list">
+            <li class="diet__item">
+              <h2 class="diet__title">Похудение</h2>
+              <p class="diet__desc">
+                Ваш кот весит больше собаки и почти утратил способность
+                лазить по деревьям? Пора на диету! Cat Energy Slim поможет
+                вашему питомцу сбросить лишний вес.
+              </p>
+              <a class="diet__link" href="#"><span class="diet__link-text">каталог slim</span></a>
+            </li>
+            <li class="diet__item">
+              <h2 class="diet__title">Набор массы</h2>
+              <p class="diet__desc">
+                Заработать авторитет среди дворовых котов и даже собак?
+                Серия Cat Energy Pro поможет вашему коту нарастить
+                необходимые мышцы!
+              </p>
+              <a class="diet__link" href="#"><span class="diet__link-text">каталог pro</span></a>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <section class="advantages">
+        <div class="advantages__wrapper">
+          <h2 class="advantages__title section-title">Как это работает</h2>
+          <ul class="advantages__list">
+            <li class="advantages__item">
+              <p class="advantages__text">
+                Функциональное питание
+                содержит только полезные
+                питательные вещества.
+              </p>
+            </li>
+            <li class="advantages__item">
+              <p class="advantages__text">
+                Выпускается в виде порошка,
+                который нужно лишь залить
+                кипятком и готово.
+              </p>
+            </li>
+            <li class="advantages__item">
+              <p class="advantages__text">
+                Замените один-два приема
+                обычной еды на наше
+                функциональное питание.
+              </p>
+            </li>
+            <li class="advantages__item">
+              <p class="advantages__text">
+                Уже через месяц наслаждайтесь
+                изменениями к лучшему
+                вашего питомца!
+              </p>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <section class="example">
+        <div class="example__wrapper">
+          <h2 class="example__tittle section-title">Живой пример</h2>
+          <div class="example__text">
+            <p class="example__desc">
+              Борис сбросил 5 кг за 2 месяца, просто заменив свой
+              обычный корм на Cat Energy Slim. Отличный результат
+              без изнуряющих тренировок! При этом он не менял своих
+              привычек и по-прежнему спит по 16 часов в день.
+            </p>
+            <div class="stats">
+              <dl class="stats__list">
+                <div class="stats__item">
+                  <dt class="stats__title">5 КГ</dt>
+                  <dd class="stats__desc">снижение веса</dd>
+                </div>
+                <div class="stats__item">
+                  <dt class="stats__title">60 дней</dt>
+                  <dd class="stats__desc">затрачено времени</dd>
+                </div>
+              </dl>
+              <p class="stats__text"><span>затраты на питание:</span><span>15000 руб</span></p>
+            </div>
+          </div>
+          <div class="example__slider slider">
+            <div class="slider__wrapper">
+              <div class="slider__before">
+                <img src="images/tablet-before-1x.png" alt="Борис ДО>" width="280" height="256">
+              </div>
+              <div class="slider__after">
+                <img src="images/tablet-after-1x.png" alt="Борис после" width="280" height="256">
+              </div>
+              <div class="slider__scroller"></div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="location">
+        <div class="location__wrapper">
+          <div class="location__contacts contacts">
+            <h2 class="location__title">приглашаем к сотрудничеству дилеров!</h2>
+            <div>
+              <p class="location__text">
+                ул. Большая Конюшенная, д. 19/8
+              </p>
+              <p class="location__text">
+                Санкт-Петербург
+              </p>
+            </div>
+          </div>
+          <div class="location__map">
+            <img src="#" alt="Мы на карте" width="320" height="362">
+          </div>
+        </div>
+      </section>
+    </main>
+    <footer class="footer">
+      <div class="footer__wrapper">
+        <a class="footer__logo logo-text" href="index.html">
+          <img src="images/logo-text.svg" alt="Логотип Cat Energy" width="118" height="59">
+        </a>
+        <ul class="social-list">
+          <li class="social-list__item">
+            <a class="social-list__link social-list__link--vk" href="#"><span class="visually-hidden">Мы в вКонтакте</span></a>
+          </li>
+          <li class="social-list__item">
+            <a class="social-list__link social-list__link--yt" href="#"><span class="visually-hidden">Мы на Ютубе</span></a>
+          </li>
+          <li class="social-list__item">
+            <a class="social-list__link social-list__link--tg" href="#"><span class="visually-hidden">Мы в Телеграмм</span></a>
+          </li>
+        </ul>
+        <a class="footer__copyright copyright" href="https://htmlacademy.ru/intensive/adaptive">
+          <p class="copyright__text">HTML Academy</p>
+          <svg width="27" height="35" viewBox="0 0 27 35" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M13.6426 0.515754L13.5 0.5L0 1.90733V26.5129L13.5 34.5L27 26.5129V1.90733L13.6426 0.515754ZM25.2344 25.5151L13.5 32.4573L1.76561 25.5151V15.4293L13.4507 22.3451L13.4701 23.5984L5.45351 18.8548L5.44295 20.0801L13.4894 24.8885L13.5088 26.175L5.46408 21.4174L5.45351 22.6427L13.5 27.4511L21.6239 22.6182V21.3929V17.409L25.2432 15.2595L25.2344 25.5151ZM25.2344 13.9519L22.0147 15.8319L20.5325 16.7071L13.4666 12.5201L13.456 13.7454L19.4957 17.318L19.4429 17.3495L19.3126 17.4247L18.4536 17.9166L13.4666 14.9689L13.456 16.1942L17.3921 18.5222L16.4591 19.1314L16.438 19.1436L13.4666 17.402L13.456 18.6273L15.4029 19.7615L13.4155 20.9483L1.7973 14.0762L13.4349 7.11831L25.2344 13.9519ZM25.2344 12.7266L13.4401 5.81075L1.76561 12.7196V3.4897L13.5 2.26442L25.2344 3.4897V12.7266Z" fill="#666666" />
+          </svg>
+        </a>
+      </div>
+    </footer>
   </body>
 </html>
