--- a/source/index.html
+++ b/source/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Cat ENERGY</title>
+  <title>Cat Energy</title>
   <link rel="preload" href="fonts/lato/Lato-Regular.woff2" as="font" crossorigin="anonymous">
   <link rel="preload" href="fonts/oswald/oswaldregular.woff2" as="font" crossorigin="anonymous">
   <link rel=" icon" href="favicon.ico">
@@ -40,7 +40,7 @@
               <a class="main-nav__link main-nav__link--index main-nav__link--current" href="index.html" aria-current="page">Главная</a>
             </li>
             <li class="main-nav__item">
-              <a class="main-nav__link main-nav__link--index" href="catalog.html">Каталог продукции</a>
+              <a class="main-nav__link main-nav__link--index" href="catalog.html">Каталог магазина</a>
             </li>
             <li class="main-nav__item">
               <a class="main-nav__link main-nav__link--index" href="#">Подбор программы</a>
@@ -81,7 +81,7 @@
               лазить по деревьям? Пора на диету! Cat Energy Slim поможет
               вашему питомцу сбросить лишний вес.
             </p>
-            <a class="diet__link" href="#">каталог slim</a>
+            <a class="diet__link" href="#">Каталог slim</a>
           </li>
           <li class="diet__item diet__item--fat">
             <h3 class="diet__title">Набор массы</h3>
@@ -90,7 +90,7 @@
               Серия Cat Energy Pro поможет вашему коту нарастить
               необходимые мышцы!
             </p>
-            <a class="diet__link" href="#">каталог pro</a>
+            <a class="diet__link" href="#">Каталог pro</a>
           </li>
         </ul>
       </div>
@@ -162,7 +162,7 @@
                 <source type="image/webp" srcset="images/before-mobile@1x.webp 1x, images/before-mobile@2x.webp 2x" width="280" height="256">
                 <source media="(min-width: 1440px)" type="image/png" srcset="images/before-desktop@1x.png 1x, images/before-desktop@2x.png 2x" width="560" height="512">
                 <source media="(min-width: 768px)" type="image/png" srcset="images/before-tablet@1x.png 1x, images/before-tablet@2x.png 2x" width="560" height="512">
-                <img class="slider__image slider__image--before" src="images/before-mobile@1x.png" srcset="images/before-mobile@2x.png 2x" alt="Борис ДО>" width="280" height="256" loading="lazy">
+                <img class="slider__image slider__image--before" src="images/before-mobile@1x.png" srcset="images/before-mobile@2x.png 2x" alt="Борис До>" width="280" height="256" loading="lazy">
               </picture>
               <button class="button slider__curtain" type="button">
                 <span class="visually-hidden">Посмотрите разницу</span>
