--- a/source/index.html
+++ b/source/index.html
@@ -40,7 +40,7 @@
               <a class="main-nav__link main-nav__link--index main-nav__link--current" href="index.html" aria-current="page">Главная</a>
             </li>
             <li class="main-nav__item">
-              <a class="main-nav__link main-nav__link--index" href="catalog.html">Каталог магазина</a>
+              <a class="main-nav__link main-nav__link--index" href="catalog.html">Каталог продукции</a>
             </li>
             <li class="main-nav__item">
               <a class="main-nav__link main-nav__link--index" href="#">Подбор программы</a>
